INTYGFV-10551: Refactoring of subscription services. Added error handling, error and monitorlogging for failed subscription service calls.